--- a/packages/end-user/src/css/common/_icon-pairs.scss
+++ b/packages/end-user/src/css/common/_icon-pairs.scss
@@ -2,7 +2,7 @@
 .icon-pair {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
 }
 
 %icon-pair__icon,
