Standardized all color names to match colors used by the UI library

--- a/packages/end-user/src/css/_global-vars.scss
+++ b/packages/end-user/src/css/_global-vars.scss
@@ -8,10 +8,10 @@ $spacing-xl: $spacing-base * 4;
 $spacing-xx: $spacing-base * 6.5;
 
 // COLOR TOKENS
-$color-primary: #277ba5;
-$color-primary-bright: #3d88ae;
-$color-critical: #de3602;
-$color-warning: #eeb91c;
+$color-active-blue: #277ba5;
+$color-active-blue-highlighted: #3d88ae;
+$color-critical-red: #de3602;
+$color-warning-yellow: #eeb91c;
 
 $color-neutral-10: #4d4d4d;
 $color-neutral-20: #595959;
