--- a/packages/end-user/src/css/common/_inputs.scss
+++ b/packages/end-user/src/css/common/_inputs.scss
@@ -5,7 +5,7 @@ $input-text-color: $color-neutral-30;
 $input-border-color: $color-neutral-40;
 $input-padding-vertical: $spacing-md;
 $input-padding-horizontal: $spacing-sm;
-$input-focus-border-color: $color-primary;
+$input-focus-border-color: $color-active-blue;
 
 // TEXT STYLES
 %input-text,
