--- a/packages/end-user/src/css/components/_button.scss
+++ b/packages/end-user/src/css/components/_button.scss
@@ -4,8 +4,8 @@ $button-padding: $spacing-sm;
 $button-radius: 2px;
 // primary
 $button-primary-text-color: $color-neutral-100;
-$button-primary-bg-color: $color-primary;
-$button-primary-hover-bg-color: $color-primary-bright;
+$button-primary-bg-color: $color-active-blue;
+$button-primary-hover-bg-color: $color-active-blue-highlighted;
 // disabled
 $button-disabled-opacity: 0.2;
 
