Success icon on text fields and error page

--- a/packages/end-user/src/css/components/_text-input.scss
+++ b/packages/end-user/src/css/components/_text-input.scss
@@ -21,3 +21,10 @@
 
     padding-right: $spacing-xl;
 }
+
+.text-input--success {
+    background: right $spacing-sm center no-repeat url("../icons/success.svg");
+    background-color: white;
+
+    padding-right: $spacing-xl;
+}
