--- a/packages/end-user/src/css/components/_tooltip.scss
+++ b/packages/end-user/src/css/components/_tooltip.scss
@@ -18,9 +18,10 @@ $tooltip-border: $color-neutral-60;
     border: 1px solid $tooltip-border;
     border-radius: 1px;
     bottom: 0;
+    box-shadow: 1px 1px 5px $color-neutral-10;
     padding: $spacing-md;
     position: absolute;
-    right: -$spacing-sm * 2;
+    right: -$spacing-md;
     transform: translateX(100%);
     z-index: 1;
 
@@ -35,7 +36,7 @@ $tooltip-border: $color-neutral-60;
 
 @media (max-width: 1000px) {
     .tooltip {
-        bottom: -$spacing-sm * 2;
+        bottom: -$spacing-md;
         right: 0;
         transform: translateY(100%);
 
