--- a/packages/end-user/src/css/components/_float-label.scss
+++ b/packages/end-user/src/css/components/_float-label.scss
@@ -1,6 +1,6 @@
 // FLOAT LABELS
-$float-label-input-padding-top: $spacing-lg;
-$float-label-input-padding-bottom: $spacing-xs;
+$float-label-input-padding-top: $input-padding-vertical + $spacing-xs;
+$float-label-input-padding-bottom: $input-padding-vertical - $spacing-xs;
 $float-label-color: $color-neutral-30;
 
 .float-label {
@@ -25,8 +25,8 @@ $float-label-color: $color-neutral-30;
     top: 0;
     left: 0;
     right: 0;
-    margin-top: 4px;
-    margin-left: 4px;
+    margin-top: $spacing-xs + 1px;
+    margin-left: $spacing-sm;
 
     cursor: text;
 }
@@ -34,6 +34,7 @@ $float-label-color: $color-neutral-30;
 .float-label__input, .float-label .float-label__input {
     padding-top: $float-label-input-padding-top;
     padding-bottom: $float-label-input-padding-bottom;
+    padding-left: $spacing-sm + $spacing-sm;
 
     &::placeholder {
         color: rgba(255,255,255,0);
@@ -47,6 +48,7 @@ $float-label-color: $color-neutral-30;
 .float-label__input:placeholder-shown, .float-label__input.placeholder-shown {
     padding-top: $input-padding-vertical;
     padding-bottom: $input-padding-vertical;
+    padding-left: $spacing-sm;
 
     & + .float-label__label {
         color: $float-label-color;
