--- a/packages/end-user/src/css/components/_tooltip.scss
+++ b/packages/end-user/src/css/components/_tooltip.scss
@@ -18,7 +18,7 @@ $tooltip-border: $color-neutral-60;
     border: 1px solid $tooltip-border;
     border-radius: 1px;
     bottom: 0;
-    box-shadow: 1px 1px 5px $color-neutral-10;
+    box-shadow: 1px 1px 4px rgba($color-neutral-10, 0.25);
     padding: $spacing-md;
     position: absolute;
     right: -$spacing-md;
