UIP-1436 UIP-1437 : small css fixes, tweaks, and new styles for the v2 platform
Change-Id: I3a5666c7967dfe835cb05237523b135da607ff2c

--- a/packages/ui-library/src/css/html-elements.scss
+++ b/packages/ui-library/src/css/html-elements.scss
@@ -62,15 +62,21 @@ i {
     font-style: italic;
 }
 
-ul.ul {
+ul.ul,
+ol.ol {
     margin: 5px 0 15px 20px;
+
+    li {
+        margin: 0 0 15px;
+    }
+}
+ul.ul {
     li {
         list-style: disc;
     }
 }
 
 ol.ol {
-    margin: 5px 0 15px 20px;
     li {
         list-style: decimal;
     }
