--- a/packages/ui-library/src/css/text.scss
+++ b/packages/ui-library/src/css/text.scss
@@ -47,6 +47,10 @@
     color: $color-slate;
     font-size: 15px;
 }
+.textblock--value {
+    color: $color-midnight;
+    font-size: 15px;
+}
 
 .pipe {
     &:before {
