--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -64,7 +64,9 @@
                 text-align: center;
                 font-weight: 400;
                 font-size: 24px;
+                line-height: 1.2em;
                 margin: 0;
+                padding: 0 0 20px 0;
             }
         }
     }
@@ -323,7 +325,7 @@
                 margin-bottom: 0.5em;
             }
             div {
-                &:not(.button-group) {
+                &:not(.button-group):not(.title) {
                     padding: 20px;
                     margin-top: 0;
                     .input-row {
