UIP-1439 indent fixes
Change-Id: I368ff0c489b7e3bd3a5eb082f6bc25373990d765

--- a/packages/ui-library/src/css/text.scss
+++ b/packages/ui-library/src/css/text.scss
@@ -14,18 +14,26 @@
             }
         }
         .count {
-            color: $color-elephant;
+            color: $color-blue-grey;
             &:hover {
                 text-decoration: none;
             }
         }
         [class^='icon-'],
         [class*=' icon-'] {
-            color: $color-elephant;
+            color: $color-blue-grey;
             display: inline-block;
             &:hover {
                 text-decoration: none;
             }
+            &:before {
+                display: inline-block;
+            }
+        }
+
+        &.disabled {
+            pointer-events: none;
+            opacity: 0.4;
         }
     }
 }
