--- a/packages/ui-library/src/css/indent.scss
+++ b/packages/ui-library/src/css/indent.scss
@@ -10,38 +10,36 @@
     }
     .count {
         background-color: $color-white;
-        min-width: 16px;
-        height: 16px;
-        line-height: 16px;
-        font-size: 11px;
+        min-width: 15px;
+        height: 15px;
+        line-height: 15px;
+        font-size: 10px;
         margin-right: 7px;
         padding: 0 3px;
     }
     .indent-title-container {
         position: absolute;
         display: block;
-        bottom: 50%;
-        left: 0;
-        margin-left: -7px;
+        top: 50%;
+        left: 4px;
 
         .title {
-            position: absolute;
-            top: 15px;
+            color: $color-elephant;
             background-color: $color-white;
             display: inline-block;
             text-transform: uppercase;
             font-size: 12px;
-            line-height: 1.1em;
-            padding: 0 4px;
-            transform-origin: 0 0;
-            @include transform(translate(1.1em, 0) rotate(270deg));
+            padding: 4px 0;
+            writing-mode: tb;
+            -ms-writing-mode: tb-rl;
+            @include transform(rotate(180deg) translateY(50%));
         }
     }
     .indent-content {
         margin-left: 10px;
         padding-left: 20px;
         display: block;
-        border-left: 1px dotted $color-elephant;
+        border-left: 1px solid $color-neutral-80;
 
         &.no-border {
             border-left: none;
@@ -49,22 +47,6 @@
         .content-link {
             padding: 7px 3px 5px;
             margin-left: -8px;
-            a {
-                .count {
-                    color: $color-elephant;
-                    &:hover {
-                        text-decoration: none;
-                    }
-                }
-                [class^='icon-'],
-                [class*=' icon-'] {
-                    color: $color-elephant;
-                    display: inline-block;
-                    &:hover {
-                        text-decoration: none;
-                    }
-                }
-            }
             &:first-of-type {
                 padding-top: 0;
             }
@@ -76,9 +58,10 @@
     // nested
     .indent {
         margin-left: -9px;
-        padding: 3px 0 10px;
+        padding: 3px 0 0;
+        margin-bottom: 10px;
         &:last-of-type {
-            padding-bottom: 0;
+            margin-bottom: 0;
         }
         .indent-content {
             .link {
