UIP-1463 fix tile selector IE issues
Change-Id: I9609875859cce9870da91bc1343059dd5325c645

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -498,9 +498,10 @@ button.ellipsis-loader-button {
     height: auto;
     white-space: normal;
     @include flexbox;
-    flex-direction: column;
+    @include flexbox-direction(column);
     align-items: center;
     justify-content: space-between;
+    -ms-flex: 1 1 100%;
 
     &:hover, &:active, &.tile-button--selected {
         border-color: $color-active-blue;
