--- a/packages/ui-library/src/css/mixins.scss
+++ b/packages/ui-library/src/css/mixins.scss
@@ -227,6 +227,11 @@
     display: inline-flex;
 }
 
+@mixin flexbox-direction($value) {
+    flex-direction: $value;
+    -ms-flex-direction: $value;
+}
+
 
 // COLOR ----------------------------------------------------------------------------------------
 
