--- a/packages/ui-library/src/css/multivalues.scss
+++ b/packages/ui-library/src/css/multivalues.scss
@@ -2,14 +2,10 @@
     position: relative;
     display: inline-block;
     width: 350px;
-    height: 200px;
-    background-color: $color-input-fill;
     font-size: 16px;
     text-transform: none;
     cursor: text;
     margin: 0;
-    overflow: scroll;
-    padding: 12px 7px 12px 12px;
 
     .clear {
         font-family: $icon-font;
@@ -20,14 +16,18 @@
         color: $color-input-text;
     }
     .entries {
-        @include box-sizing(border-box);
+        position: relative;
         z-index: 10;
         display: block;
         min-height: 36px;
         outline: none;
-        overflow: hidden;
-        position: relative;
+        overflow: scroll;
+        background-color: $color-input-fill;
+        padding: 12px;
         width: 100%;
+        height: 200px;
+
+        @include box-sizing(border-box);
 
         .entry {
             border: 1px solid $color-input-border;
@@ -40,6 +40,8 @@
             vertical-align: top;
             padding: 10px 30px 10px 10px;
             text-transform: none;
+            overflow: hidden;
+            text-overflow: ellipsis;
 
             @include box-sizing(border-box);
             @include border-radius(2px);
@@ -105,6 +107,16 @@
                 padding: 0;
                 -webkit-appearance: none;
                 margin-left: 5px;
+            }
+        }
+    }
+
+    &.stacked {
+        .entries {
+            .entry,
+            .value-input {
+                float: left;
+                clear: both;
             }
         }
     }
