UIP-1450 : add searchbar component
Change-Id: If495cb678d62e378d39be9e007c664c95c382ed6

--- a/packages/ui-library/src/css/ui-library.scss
+++ b/packages/ui-library/src/css/ui-library.scss
@@ -33,6 +33,7 @@
 @import 'result-sets';
 @import 'row-index-nav';
 @import 'row-selector';
+@import 'searchbar';
 @import 'settings-sections';
 @import 'status-indicators';
 @import 'tables';
